--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -36,7 +36,7 @@ a {
 }
 
 a:active, a:active, a:hover {
-	color: rgb(225,150,25);
+	color: rgb(30,145,255);
 	-webkit-transition-duration: .5s;transition-duration: .5s;
 }
 
@@ -123,11 +123,11 @@ header h1 {
 	font-size: 7.5vw;
 	line-height: 35px;
 	text-align: left;
-	color: rgba(245,245,245,0.7) !important;
 }
 
 header h1 a {
 	color: rgba(245,245,245,1);
+	text-shadow: 1px 1px 1px rgba(50,50,50,0.5);
 }
 
 /*** END HEADER ******************************************/
@@ -148,12 +148,7 @@ header h1 a {
 }
 
 .galleryWrap {
-	/* display: -webkit-box;display: -webkit-flex;display: -ms-flexbox;display: flex;
-	-webkit-flex-wrap: wrap;-ms-flex-wrap: wrap;flex-wrap: wrap; */
-	/* -webkit-justify-content: space-around;-ms-flex-pack: distribute;justify-content: space-around; */
-	/* -webkit-box-pack: justify;-webkit-justify-content: space-between;-ms-flex-pack: justify;justify-content: space-between; */
-	/* padding: 15px; */
-	/* border: 1px solid orange; */
+	
 }
 
 .movieWrap {
@@ -236,6 +231,7 @@ MODAL NAV
 	position: relative;
 	text-align: center;
 	width: 100%;
+	max-width: 1200px;
 	margin: auto auto 25px;
 }
 
@@ -245,12 +241,12 @@ MODAL NAV
 	width: 45px;
 	height: 45px;
 	cursor: pointer;
-	filter: drop-shadow(1px 1px 3px rgba(0,0,0,.5));
+	-webkit-filter: drop-shadow(1px 1px 3px rgba(0,0,0,.5));filter: drop-shadow(1px 1px 3px rgba(0,0,0,.5));
 	-webkit-transition-duration: .5s;transition-duration: .5s;
 }
 
 .arrowWrap:hover {
-	filter: drop-shadow(5px 5px 5px rgba(0,0,0,.5));
+	-webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,.5));filter: drop-shadow(5px 5px 5px rgba(0,0,0,.5));
 	-webkit-transition-duration: .5s;transition-duration: .5s;
 }
 
@@ -272,19 +268,26 @@ MODAL NAV
 }
 
 .arrowTopLeft {
-	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);transform: rotate(-45deg);
 }
 
 .arrowBottomLeft {
-	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);transform: rotate(45deg);
 }
 
 .arrowTopRight {
-	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);transform: rotate(45deg);
 }
 
 .arrowBottomRight {
-	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);transform: rotate(-45deg);
+}
+
+.arrowFixed {
+	position: fixed;
+	top: 10px;
+	margin-left: -20px;
+	z-index: 9999999;
 }
 /*** END MODAL NAV ***************************************/
 
@@ -308,9 +311,14 @@ MODAL
 }
 
 .openModal {
-	animation: showModal 1s ease forwards;
+	-webkit-animation: showModal 1s ease forwards;animation: showModal 1s ease forwards;
 }
 
+@-webkit-keyframes showModal {
+	0% {width: 0%; height: 0%;}
+	50% {width: 100%; height: 0%;}
+	100% {width: 100%; height: 100%;}
+}
 @keyframes showModal {
 	0% {width: 0%; height: 0%;}
 	50% {width: 100%; height: 0%;}
@@ -318,9 +326,14 @@ MODAL
 }
 
 .closeModal {
-	animation: hideModal 1s ease forwards;
+	-webkit-animation: hideModal 1s ease forwards;animation: hideModal 1s ease forwards;
 }
 
+@-webkit-keyframes hideModal {
+	0% {width: 100%; height: 100%;}
+	50% {width: 100%; height: 0%;}
+	100% {width: 0%; height: 0%;}
+}
 @keyframes hideModal {
 	0% {width: 100%; height: 100%;}
 	50% {width: 100%; height: 0%;}
