--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,13 +13,17 @@
 	 GENERAL
 	**********************************************************/
 
-
 	/*** END GENERAL ******************************************/
 
 	
+	
 	/*********************************************************
-	 HEADER
+	 HEADER 500px
 	**********************************************************/
+	.headerInnerWrap {
+		padding-left: 35px;
+	}
+	
 	header img {
 		width: 5vw;
 		height: 3.9vw;
@@ -27,7 +31,6 @@
 	}
 	
 	header h1 {
-
 		font-size: 5vw;
 		line-height: 45px;
 	}
@@ -36,20 +39,20 @@
 
 
 
-
 	/*********************************************************
 	 NAV
 	**********************************************************/
 
-
 	/*** END NAV *********************************************/
 
+	
 
 	/*********************************************************
-	 MAIN WRAP
+	 MAIN WRAP 500px
 	**********************************************************/
 	.mainWrap {
 		padding-top: 40px;
+		padding-left: 35px;
 	}
 	
 	.movieWrap {
@@ -69,7 +72,7 @@
 	
 	
 	/*********************************************************
-	 MODAL
+	 MODAL 500px
 	**********************************************************/
 	.movieTitle {
 		font-size: 2.5em;
@@ -84,13 +87,14 @@
 	
 
 	/*********************************************************
-	 FOOTER
+	 FOOTER 500px
 	**********************************************************/
-
+	.footerInnerWrap {
+		padding-left: 35px;
+	}
 	/*** END FOOTER ******************************************/
 }
 /*** END MEDIUM SCREENS ************************************/
-
 
 
 
@@ -102,12 +106,12 @@
 	 GENERAL
 	**********************************************************/
 
-
 	/*** END GENERAL ******************************************/
 
 	
+	
 	/*********************************************************
-	 HEADER
+	 HEADER 750px
 	**********************************************************/
 	header img {
 		width: 4vw;
@@ -119,20 +123,20 @@
 		font-size: 4vw;
 		line-height: 55px;
 	}
-
 	/*** END HEADER ******************************************/
 
+	
 
 	/*********************************************************
 	 NAV
 	**********************************************************/
 
-
 	/*** END NAV *********************************************/
 
+	
 
 	/*********************************************************
-	 MAIN WRAP
+	 MAIN WRAP 750px
 	**********************************************************/
 	.movieWrap {
 		width: 200px;
@@ -144,6 +148,7 @@
 	}
 	/*** END MAIN WRAP ***************************************/
 
+	
 
 	/*********************************************************
 	 FOOTER
@@ -164,16 +169,15 @@
 	 GENERAL
 	**********************************************************/
 
-
 	/*** END GENERAL ******************************************/
+	
+	
 	
 	/*********************************************************
 	 HEADER
 	**********************************************************/
 
-
 	/*** END HEADER ******************************************/
-
 
 
 
@@ -181,9 +185,9 @@
 	 NAV
 	**********************************************************/
 
-
 	/*** END NAV *********************************************/
 
+	
 
 	/*********************************************************
 	 MAIN WRAP
@@ -192,6 +196,7 @@
 	/*** END MAIN WRAP ***************************************/
 
 
+	
 	/*********************************************************
 	 FOOTER
 	**********************************************************/
@@ -210,16 +215,15 @@
 	 GENERAL
 	**********************************************************/
 
-
 	/*** END GENERAL ******************************************/
+	
+	
 	
 	/*********************************************************
 	 HEADER
 	**********************************************************/
 
-
 	/*** END HEADER ******************************************/
-
 
 
 
@@ -227,10 +231,10 @@
 	 NAV
 	**********************************************************/
 
-
 	/*** END NAV *********************************************/
 
 	
+
 	
 	/*********************************************************
 	MODAL
@@ -238,7 +242,10 @@
 	.modal {
 		margin-left: -600px;
 	}
-
+	
+	.arrowFixed {
+		margin-left: 0px;
+	}
 	/*** END MODAL *********************************************/
 	
 	
@@ -250,6 +257,7 @@
 	/*** END MAIN WRAP ***************************************/
 
 
+	
 	/*********************************************************
 	 FOOTER
 	**********************************************************/
