--- a/css/responsive.css
+++ b/css/responsive.css
@@ -79,6 +79,7 @@
 	}
 	
 	.movieInfo li img {
+		width: 145px;
 		height: 200px;
 		margin-right: 5px;
 	}
@@ -193,8 +194,10 @@
 	 MAIN WRAP 1000px
 	**********************************************************/
 	.scrim {
+		position: absolute;
 		width: 100%;
 		height: 100%;
+		z-index: 9;
 		-webkit-transition-duration: .5s;transition-duration: .5s;
 	}
 
