--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -198,6 +198,11 @@ header h1 a {
 	border-top: 2px double rgb(50,50,50);
 	border-bottom: 2px double rgb(50,50,50);
 }
+
+.fullPoster {
+	width: 100%;
+	height: 100%;
+}
 /*** END MAIN WRAP ***************************************/
 
 
